k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-dev
  labels:
    pod-security.kubernetes.io/enforce: privileged
